// Vitest Snapshot v1

exports[`dragAndDrop > should allow drag and drop to 0 coordinates 1`] = `
[
  {
    "actions": [
      {
        "duration": 0,
        "origin": {
          "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
        },
        "type": "pointerMove",
        "x": 0,
        "y": 0,
      },
      {
        "button": 0,
        "type": "pointerDown",
      },
      {
        "duration": 10,
        "type": "pause",
      },
      {
        "duration": 10,
        "origin": "pointer",
        "type": "pointerMove",
        "x": 0,
        "y": 0,
      },
      {
        "button": 0,
        "type": "pointerUp",
      },
    ],
    "id": "finger1",
    "parameters": {
      "pointerType": "mouse",
    },
    "type": "pointer",
  },
]
`;

exports[`dragAndDrop > should do a dragAndDrop 1`] = `
[
  {
    "actions": [
      {
        "duration": 0,
        "origin": {
          "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
        },
        "type": "pointerMove",
        "x": 0,
        "y": 0,
      },
      {
        "button": 0,
        "type": "pointerDown",
      },
      {
        "duration": 10,
        "type": "pause",
      },
      {
        "duration": 10,
        "origin": {
          "element-6066-11e4-a52e-4f735466cecf": "some-sub-elem-321",
        },
        "type": "pointerMove",
        "x": 0,
        "y": 0,
      },
      {
        "button": 0,
        "type": "pointerUp",
      },
    ],
    "id": "finger1",
    "parameters": {
      "pointerType": "mouse",
    },
    "type": "pointer",
  },
]
`;

exports[`dragAndDrop > should do a dragAndDrop with coordinates 1`] = `
[
  {
    "actions": [
      {
        "duration": 0,
        "origin": {
          "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
        },
        "type": "pointerMove",
        "x": 0,
        "y": 0,
      },
      {
        "button": 0,
        "type": "pointerDown",
      },
      {
        "duration": 10,
        "type": "pause",
      },
      {
        "duration": 10,
        "origin": "pointer",
        "type": "pointerMove",
        "x": 123,
        "y": 321,
      },
      {
        "button": 0,
        "type": "pointerUp",
      },
    ],
    "id": "finger1",
    "parameters": {
      "pointerType": "mouse",
    },
    "type": "pointer",
  },
]
`;
